[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/crafting_tab.gd" id="1"]

[node name="CraftingTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Crafting"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="CraftResult" type="VBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
visible = false

[node name="ResultTitle" type="Label" parent="VBox/CraftResult"]
layout_mode = 2
text = "Craft Result:"
theme_override_font_sizes/font_size = 14

[node name="ResultName" type="Label" parent="VBox/CraftResult"]
unique_name_in_owner = true
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1

[node name="ResultGrade" type="Label" parent="VBox/CraftResult"]
unique_name_in_owner = true
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ResultPrice" type="Label" parent="VBox/CraftResult"]
unique_name_in_owner = true
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="Sep" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipeList" type="VBoxContainer" parent="VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
